# back

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  pyproject.toml
.superpowers/sdd/: progress.md  task-5b-shopping-port-report.md  task-final-fix-report.md
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_kakao_id_nullable_password.py  b2c3d4e5f6a7_add_saved_recipes.py  c3d4e5f6a7b8_add_shopping_items.py  c3d4e5f6a7b8_add_users_deleted_at.py  d4e5f6a7b8c9_add_household_groups.py  e5f6a7b8c9d0_add_shopping_group_scope.py  e66400ab6c96_create_user_table.py  f550a0b2a076_init_schema.py  f6a7b8c9d0e1_add_is_email_verified.py  h8i9j0k1l2m3_add_notifications.py  i9j0k1l2m3n4_delete_ai_saved_recipes.py  j0k1l2m3n4o5_add_ingredient_shelf_life.py
docs/: unverified-user-purge-ops.md
scripts/: purge_unverified_users.py  purge_withdrawn_users.py
src/: main.py
src/api/: api.py  deps.py
src/core/: config.py  database.py  logger.py  redis.py  security.py
tests/: conftest.py
tests/api/: test_ai_recipe_api.py  test_auth_api.py  test_group_api.py  test_ingredient_api.py  test_notification_api.py  test_ocr_api.py  test_rag_api.py  test_recipe_detail_api.py  test_saved_recipe_api.py  test_shopping_api.py  test_user_me_api.py
tests/fixtures/: 10000recipe_detail.html  10000recipe_search.html
tests/unit/: test_ai_quota_exception.py  test_ai_recipe_agent.py  test_ai_recipe_cache.py  test_ai_recipe_partial_json.py  test_ai_recipe_quota.py  test_ai_recipe_schemas.py  test_ai_recipe_service.py  test_ai_recipe_tools.py  test_auth_service.py  (+29 more)
(+115 files in other folders)
