[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-postgres>=0.0.17",
    "loguru>=0.7.3",
    "openai>=2.46.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uuid6>=2025.0.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
